# csan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: checks.yml  publish.yml  release.yml
src/csan/: __init__.py  cutter.py  data.py  main.py  naming.py  table.py
tests/: test_cutter.py
