[project]
name = "csan"
version = "0.4.0"
description = "CLI tool that generates a Cutter-Sanborn identifier, given a first and a last name."
readme = "README.md"
authors = [{ name = "VERA LVX", email = "veralvx@veralvx.com" }]
maintainers = [{ name = "VERA LVX", email = "veralvx@veralvx.com" }]
license = "Apache-2.0"
keywords = [
    "cutter",
    "sanborn",
    "cutter-sanborn",
    "cutter-number",
    "cutter-notation",
    "catalog",
    "cataloging",
    "cataloguing",
    "library",
    "library-catalog",
    "call-number",
    "three-figure",
    "bibliographic",
    "cli",
    "command-line"
]
requires-python = ">=3.10"
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
Changelog = "https://github.com/veralvx/csan/blob/main/CHANGELOG.md"
Documentation = "https://github.com/veralvx/csan"
Homepage = "https://github.com/veralvx/csan"
Issues = "https://github.com/veralvx/csan/issues"
Releasenotes = "https://github.com/veralvx/csan/releases"
Repository = "https://github.com/veralvx/csan"

[project.scripts]
csan = "csan.main:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
preview = false
select = ["ALL"]
ignore = [
    "ANN001",
    "ANN002",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN206",
    "ANN401",
    "COM812",
    "CPY001",
    "C901",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D203",
    "D212",
    "D413",
    "E731",
    "EM101",
    "EM102",
    "ERA001",  #commented-out-code (ERA001)
    "FIX002",
    "FURB118",
    "INP001",
    "PLR2004",
    "PLR0904", # Too many public methods (>20)
    "PLR0912", # Too many branches (>12)
    "PLR0911", # To many return statements (>6)
    "PLR0915", # To many statements (>50)
    "PLR1702", # too-many-nested-blocks (PLR1702)
    "PT011",
    "PTH123",  # use pathlib instead of open
    "PYI056",
    "S101",
    "S404",    # suspicious-subprocess-import
    "S603",    # `subprocess` call: check for execution of untrusted inputRuff
    "S607",    # start-process-with-partial-path (S607)
    "SIM105",  # suppressible-exception (SIM105)
    "SLF001",  # private-member-access
    "T201",
    "TC006",   #runtime-cast-value
    "TD",
    "TRY003",
    "UP030"    #format-literals (UP030)
]

[tool.pyright]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "mypy>=1.18.2",
    "pyrefly>=0.40.0",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
    "ty>=0.0.1a25"
]
